<resources>
    <string name="app_name">Mash-Up</string>
    <string name="attendees_tv_title">투표 참여</string>
    <string name="attendees_tv_attendance_format"><![CDATA[참여할게요 : <font color="#4f42e9">%d명</font>]]></string>
    <string name="attendees_tv_absent_format"><![CDATA[불참할게요 : <font color="#4f42e9">%d명</font>]]></string>
    <string name="attendees_tv_unselected_format"><![CDATA[미참여 : <font color="#4f42e9">%d명</font>]]></string>
    <string name="notice_example_content">
        다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해주쇼!!다들 노트북 지참해줘!!
    </string>
    <string name="notice_example_date">2018월 11월 24일 3시-6시</string>
    <string name="notice_example_location">삼성역 위워크 10층</string>
    <string name="home_drawer_item_notice_team">팀별 스터디 공지</string>
    <string name="home_drawer_item_notice_project">프로젝트팀 공지</string>
    <string name="home_drawer_item_web">웹(공지만들기)</string>
    <string name="home_drawer_item_introduce">매쉬업 소개</string>
    <string name="title_public_notice">전체회의 공지</string>
    <string name="login_tv_email">이메일</string>
    <string name="login_et_email">mashup@gmail.com</string>
    <string name="login_et_password">8-12 글자로 정해주세요.</string>
    <string name="login_btn">로그인하기</string>
    <string name="login_tv_screen_title">로그인</string>
    <string name="login_tv_main_title">매쉬업 공지앱</string>
    <string name="login_tv_password">비밀번호</string>
    <string name="tv_sign_in">인증 및 회원가입하기</string>
    <string name="login_tv_welcome_msg">WELCOME TO MASH UP NOTICE APP</string>

    <string name="notice_attendance_set_format">투표 | %1$d명 중 %2$d명 참여 중</string>
    <string name="notice_attendance_set_complete">투표 종료</string>
    <string name="notice_tv_vote_attendance">참여할게요! %d</string>
    <string name="notice_tv_vote_absent">불참할게요! %d</string>

    <string name="login_error_message_empty_text">이메일 혹은 비밀번호를 채워주세요!</string>
    <string name="error_message_unknown">알 수 없는 에러가 발생했습니다.</string>

    <string name="setting_send_feedback_email_title">건의사항 보내기</string>
    <string name="setting_tv_send_feedback_email">피드백 메일</string>
    <string name="setting_tv_maker">만든이</string>
    <string name="setting_tv_logout">로그아웃하기</string>
    <string name="title_notice">전체공지</string>
    <string name="title_setting">설정</string>

    <string name="notice_see_more">더 보기</string>
    <string name="notice_collapse">다시 접기</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">mash_up</string>
</resources>
