<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.mashup.BuildConfig" />

        <variable
            name="viewmodel"
            type="com.mashup.app.setting.SettingViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBaseBg">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="@dimen/card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/setting_tv_send_feedback_email"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:onClick="@{() -> viewmodel.sendFeedBackEmail()}"
                    android:textColor="@color/author"
                    android:textSize="@dimen/text_normal"
                    app:email="@{BuildConfig.FEED_BACK_EMAIL}"
                    tools:text="recruit.mashup@gmail.com" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/line" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/setting_tv_maker"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="강대규"
                    android:textColor="@color/author"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="고은이"
                    android:textColor="@color/author"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:gravity="center"
                    android:text="김범준"
                    android:textColor="@color/author"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="60dp"
                    android:gravity="center"
                    android:text="신정아"
                    android:textColor="@color/author"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card"
            android:layout_alignEnd="@+id/card"
            android:layout_marginTop="20dp"
            android:drawableStart="@drawable/icon_log_out"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:onClick="@{() -> viewmodel.onClickLogoutButton()}"
            android:text="@string/setting_tv_logout"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_normal" />

    </RelativeLayout>
</layout>
